# pythondeps-dgcnn

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: deploy_docker.yml
