[tool.poetry]
name = "pythondeps"
version = "0.1.0"
description = "Containerized python environment"
authors = ["Ali Khan <alik@robarts.ca>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
antiprism-python = "^0.1.3"
dipy = "^1.5.0"
matplotlib = "^3.6.0"
nibabel = "^4.0.2"
numpy = "^1.23.0"
scipy = "^1.9.1"
stripy = "^2.1.0"
torch = "^1.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
