[tool.poetry]
name = "pythondeps"
version = "0.1.0"
description = "Containerized python environment"
authors = ["Ali Khan <alik@robarts.ca>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
dgcnn = {git = "https://github.com/akhanf/dgcnn.git", rev = "master"}
torch = "^1.12.1"
numpy = "^1.23.3"
nibabel = "^4.0.2"
matplotlib = "^3.6.0"
snakemake = "^7.0.0"
tabulate = "<0.9.0"
snakebids = "^0.6.2"
torchinfo = "^1.7.1"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
